log
Thu 07 Sep 2023 03:18:57 PM UTC: 
 tests:  0|6
total_score: 0/70
e93a407
Thu 07 Sep 2023 03:25:58 PM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:49:15: error: expected ‘;’ before ‘}’ token
   49 |     return map
      |               ^
      |               ;
   50 | }
      | ~              
At top level:
hashmap.c:43:11: error: ‘createMap’ defined but not used [-Werror=unused-function]
   43 | HashMap * createMap(long capacity) {
      |           ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0c9df1e
Thu 07 Sep 2023 03:26:33 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c:42:11: error: ‘createMap’ defined but not used [-Werror=unused-function]
   42 | HashMap * createMap(long capacity) {
      |           ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
10f0a66
Thu 07 Sep 2023 03:34:29 PM UTC: 
 hashmap.c | 30 +++++++++++++++++++++++-------
 1 file changed, 23 insertions(+), 7 deletions(-)
In file included from test.c:4:
hashmap.c:43:6: error: ‘insertMap’ defined but not used [-Werror=unused-function]
   43 | void insertMap(HashMap * map, char * key, void * value) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
78add91
